k8s/postgress-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresss-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgress
  ports:
  - port: 5432
    targetPort: 5432
